# agentic-ai-clinical-decision-support

./: .gitignore  README.md
01_Admin/: Meeting_Notes.md  Progress_Tracker.md  TODO.md  Timeline.md
02_Research/: References.bib  Research_Gap.md
03_Dataset/: .gitignore  Cohort_Definition.md  Data_Dictionary.md  Preprocessing_Pipeline.md  README.md
04_Architecture/: Proposed_Framework.md  System_Design.md  Taxonomy.md  Technical_Feasibility.md
05_Source_Code/: .env.example  .gitignore  README.md  pyproject.toml
05_Source_Code/docker/: Dockerfile  docker-compose.yml
05_Source_Code/docs/: architecture.md
05_Source_Code/src/acdss/: __init__.py  config.py
05_Source_Code/src/acdss/agents/: __init__.py  base.py  coordinator.py  data_retrieval.py  diagnosis.py  explanation.py  monitoring.py  planner.py  risk.py  treatment.py  verification.py
05_Source_Code/src/acdss/api/: __init__.py  main.py
05_Source_Code/src/acdss/decision/: __init__.py  engine.py
05_Source_Code/src/acdss/llm/: __init__.py  anthropic_client.py  base.py
05_Source_Code/src/acdss/mcp/: __init__.py  server.py
05_Source_Code/src/acdss/memory/: __init__.py  clinical_context.py  long_term.py  manager.py  short_term.py  vector_store.py
05_Source_Code/src/acdss/orchestration/: __init__.py  graph.py
05_Source_Code/src/acdss/rag/: __init__.py  ingest.py  pipeline.py  reranker.py  retriever.py
05_Source_Code/src/acdss/trust/: __init__.py  audit_log.py  bias_monitor.py  calibration.py  safety.py
05_Source_Code/tests/: test_agents.py  test_smoke.py
06_Experiments/: Evaluation_Metrics.md  (+2 more)
(+78 files in other folders)
